// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders cancelled order correctly 1`] = `
<DocumentFragment>
  <div
    class="order"
  >
    <p
      class="name"
    >
      Order #1
    </p>
    <p
      class="order-details"
    >
      Order placed: 10:32:45 AM, Thu Sep 10 2020
    </p>
    <p
      class="order-details"
    >
      <span
        aria-hidden="true"
        class="fa fa-circle cancelled"
      />
      Status: cancelled
    </p>
    <table>
      <thead>
        <tr>
          <td
            role="columnheader"
          >
            Product
          </td>
          <td
            role="columnheader"
          >
            Quantity
          </td>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            snazzy product item
          </td>
          <td>
            3
          </td>
        </tr>
      </tbody>
    </table>
    <div />
  </div>
</DocumentFragment>
`;

exports[`renders pending order correctly 1`] = `
<DocumentFragment>
  <div
    class="order"
  >
    <p
      class="name"
    >
      Order #2
    </p>
    <p
      class="order-details"
    >
      Order placed: 10:39:26 AM, Thu Sep 10 2020
    </p>
    <p
      class="order-details"
    >
      <span
        aria-hidden="true"
        class="fa fa-circle pending"
      />
      Status: pending
    </p>
    <table>
      <thead>
        <tr>
          <td
            role="columnheader"
          >
            Product
          </td>
          <td
            role="columnheader"
          >
            Quantity
          </td>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            snazzy product item
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            snazzier product item
          </td>
          <td>
            1
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      <button
        class="order-button"
      >
        Cancel Order
      </button>
    </div>
  </div>
</DocumentFragment>
`;
